Adding User & Role classes

--- a/src/main/resources/templates/link/list.html
+++ b/src/main/resources/templates/link/list.html
@@ -82,7 +82,7 @@
 
                     <p>
                         <a th:href="@{'/book/' + ${book.id} + '#comments'}"
-                           class="comments" th:text="|${book.getComments().size()} books|"><i class="fas facomments"></i> 0 comments</a>
+                           class="comments" th:text="|${book.getComments().size()} comments|"><i class="fas facomments"></i> 0 comments</a>
                         <a href="/" class="share"><i class="fas fa-share-square"></i>
                             share</a>
                     </p>
