--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -1,86 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>bibliophile tunisien</title>
-
-    <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="static/libs/bootstrap/css/bootstrap.min.css" />
-
-    <!-- Custom styles for this template -->
-    <link href="static/css/springit.css" rel="stylesheet">
-
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Oswald|Roboto" rel="stylesheet">
-
-    <!-- Font Awesome (for icons) -->
-    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="~{layouts/main_layout :: head(title = ' BIBLIOPHILES TUNISIENS')}">
 </head>
-
 <body>
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-spring fixed-top">
-        <div class="container">
-            <a class="navbar-brand" href="/">
-                <i class="fas fa-book" aria-hidden="true"></i>
-                BIBLIOPHILES TUNISIENS
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
-                aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="/">
-                            <i class="fas fa-home" aria-hidden="true"></i> Accueil
-                        </a>
-                    </li>
-        
-                    <!-- if user is signed in -->
-                    <li class="nav-item ">
-                        <a class="nav-link" href="submit.html">
-                            <i class="fa fa-book" aria-hidden="true"></i> livres</a>
-                    </li>
-					<li class="nav-item ">
-                        <a class="nav-link" href="exchange.html">
-                            <i class="fa fa-handshake" aria-hidden="true"></i> Échange</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="profile.html">
-                            <i class="fa fa-user" aria-hidden="true"></i> Compte</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <i class="fa fa-sign-out-alt" aria-hidden="true"></i> Déconnexion</a>
-                    </li>
-        
-                    <!-- if user is not signed in -->
-                    <li class="nav-item active">
-                        <a class="nav-link" href=login.html>
-                            <i class="fa fa-sign-in-alt" aria-hidden="true"></i> Connexion</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="register.html">
-                            <i class="fa fa-user-plus" aria-hidden="true"></i> S'identifier</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-    <div class="jumbotron jumbotron-fluid">
-        <div class="container" align="center">
-            <img src="static/images/2.jpg">
-        </div>
-    </div>
+<nav th:replace="~{layouts/main_layout :: navigation}"></nav>
+<div th:replace="~{layouts/main_layout :: jumbotron}"></div>
 
     <div class="container">
 
