--- a/src/main/resources/static/css/springit.css
+++ b/src/main/resources/static/css/springit.css
@@ -15,6 +15,12 @@ button.nav-link {
     cursor: pointer;
 }
 
+button.nav-link {
+    background: #2D2A27;
+    border:none;
+    cursor: pointer;
+}
+
 
 body {
     background: #ffffff;
