--- a/src/main/resources/templates/layouts/main_layout.html
+++ b/src/main/resources/templates/layouts/main_layout.html
@@ -54,8 +54,10 @@
                             <i class="fa fa-user" aria-hidden="true"></i> Compte</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <i class="fa fa-sign-out-alt" aria-hidden="true"></i> Déconnexion</a>
+                        <form method="POST" th:action="@{/logout}">
+                            <button class="nav-link"><i class="fa fa-sign-out-alt" aria-hidden="true"></i>
+                                Déconnexion</button>
+                        </form>
                     </li>
 
                     <!-- if user is not signed in -->
