Added account register and profile mappings and templates

--- a/src/main/resources/templates/book/book.html
+++ b/src/main/resources/templates/book/book.html
@@ -27,7 +27,7 @@
                 </p>
                 <p class="tagline ">submitted
                     <time th:title="${book.getCreationDate()}" th:datetime="${book.getCreationDate()}" th:text="${book.getPrettyTime()}">2 hours ago</time> by
-                    <a href="https://www.reddit.com/user/therealdanvega" class="author">therealdanvega</a>
+                    <a href="https://www.reddit.com/user/therealdanvega" class="author" th:text="${book.createdBy}">therealdanvega</a>
                     <span class="userattrs"></span>
                 </p>
                 <p><a th:text="${book.title}"  target="_blank"></a></p>
