--- a/src/main/resources/templates/auth/register.html
+++ b/src/main/resources/templates/auth/register.html
@@ -1,187 +1,111 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>bibliophile tunisien</title>
-
-    <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="static/libs/bootstrap/css/bootstrap.min.css" />
-
-    <!-- Custom styles for this template -->
-    <link href="static/css/springit.css" rel="stylesheet">
-
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Oswald|Roboto" rel="stylesheet">
-
-    <!-- Font Awesome (for icons) -->
-    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="~{layouts/main_layout :: head(title = 'Springit - Register for an
+account')}">
 </head>
-
 <body>
-
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-spring fixed-top">
-        <div class="container">
-            <a class="navbar-brand" href="/">
-                <i class="fas fa-book" aria-hidden="true"></i>
-                BIBLIOPHILES TUNISIENS
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
-                aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="/">
-                            <i class="fas fa-home" aria-hidden="true"></i> Accueil
-                        </a>
-                    </li>
-        
-                    <!-- if user is signed in -->
-                    <li class="nav-item ">
-                        <a class="nav-link" href="submit.html">
-                            <i class="fa fa-book" aria-hidden="true"></i> livres</a>
-                    </li>
-					<li class="nav-item ">
-                        <a class="nav-link" href="exchange.html">
-                            <i class="fa fa-handshake" aria-hidden="true"></i> Échange</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="profile.html">
-                            <i class="fa fa-user" aria-hidden="true"></i> Compte</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <i class="fa fa-sign-out-alt" aria-hidden="true"></i> Déconnexion</a>
-                    </li>
-        
-                    <!-- if user is not signed in -->
-                    <li class="nav-item">
-                        <a class="nav-link" href=login.html>
-                            <i class="fa fa-sign-in-alt" aria-hidden="true"></i> Connexion</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="register.html">
-                            <i class="fa fa-user-plus" aria-hidden="true"></i> S'identifier</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-    <div class="jumbotron jumbotron-fluid">
-        <div class="container" align="center">
-            <img src="static/images/2.jpg">
+<nav th:replace="~{layouts/main_layout :: nav}"></nav>
+<div th:replace="~{layouts/main_layout :: jumbotron}"></div>
+<!-- User Registration form -->
+<form class="form-horizontal" role="form" method="POST" action="">
+    <div class="row">
+        <div class="col-md-3"></div>
+        <div class="col-md-6">
+            <h2>Enregistrer un nouvel utilisateur</h2>
+            <hr>
         </div>
     </div>
-
-    <div class="container">
-
-        <!-- User Registration form -->
-        <form class="form-horizontal" role="form" method="POST" action="">
-            <div class="row">
-                <div class="col-md-3"></div>
-                <div class="col-md-6">
-                    <h2>Enregistrer un nouvel utilisateur</h2>
-                    <hr>
+    <div class="row">
+        <div class="col-md-3 field-label-responsive">
+            <label for="name">Nom</label>
+        </div>
+        <div class="col-md-6">
+            <div class="form-group">
+                <div class="input-group mb-2 mr-sm-2 mb-sm-0">
+                    <div class="input-group-addon" style="width: 2.6rem"><i
+                            class="fa fa-user"></i></div>
+                    <input type="text" name="name" class="form-control" id="name"
+                           placeholder="John Doe" required autofocus>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-3 field-label-responsive">
-                    <label for="name">Nom</label>
-                </div>
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <div class="input-group mb-2 mr-sm-2 mb-sm-0">
-                            <div class="input-group-addon" style="width: 2.6rem"><i class="fa fa-user"></i></div>
-                            <input type="text" name="name" class="form-control" id="name"
-                                   placeholder="John Doe" required autofocus>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="form-control-feedback">
-                            <span class="text-danger align-middle">
-                                <!-- Put name validation error messages here -->
-                            </span>
-                    </div>
-                </div>
+        </div>
+        <div class="col-md-3">
+            <div class="form-control-feedback">
+<span class="text-danger align-middle">
+<!-- Put name validation error messages here -->
+</span>
             </div>
-            <div class="row">
-                <div class="col-md-3 field-label-responsive">
-                    <label for="email">Adresse E-Mail</label>
-                </div>
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <div class="input-group mb-2 mr-sm-2 mb-sm-0">
-                            <div class="input-group-addon" style="width: 2.6rem"><i class="fa fa-at"></i></div>
-                            <input type="text" name="email" class="form-control" id="email"
-                                   placeholder="you@example.com" required autofocus>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="form-control-feedback">
-                            <span class="text-danger align-middle">
-                                <!-- Put e-mail validation error messages here -->
-                            </span>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-3 field-label-responsive">
-                    <label for="password">Mot de passe</label>
-                </div>
-                <div class="col-md-6">
-                    <div class="form-group has-danger">
-                        <div class="input-group mb-2 mr-sm-2 mb-sm-0">
-                            <div class="input-group-addon" style="width: 2.6rem"><i class="fas fa-key"></i></div>
-                            <input type="password" name="password" class="form-control" id="password"
-                                   placeholder="Password" required>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="form-control-feedback">
-                            <span class="text-danger align-middle">
-                                Example Error Message
-                            </span>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-3 field-label-responsive">
-                    <label for="password">Confirmer Mot de passe</label>
-                </div>
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <div class="input-group mb-2 mr-sm-2 mb-sm-0">
-                            <div class="input-group-addon" style="width: 2.6rem">
-                                <i class="fas fa-key"></i>
-                            </div>
-                            <input type="password" name="password-confirmation" class="form-control"
-                                   id="password-confirm" placeholder="Password" required>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-3"></div>
-                <div class="col-md-6">
-                    <button type="submit" class="btn btn-success"><i class="fa fa-user-plus"></i> S'enregistrer</button>
-                </div>
-            </div>
-        </form>
-        
+        </div>
     </div>
-
+    <div class="row">
+        <div class="col-md-3 field-label-responsive">
+            <label for="email">Adresse E-Mail</label>
+        </div>
+        <div class="col-md-6">
+            <div class="form-group">
+                <div class="input-group mb-2 mr-sm-2 mb-sm-0">
+                    <div class="input-group-addon" style="width: 2.6rem"><i
+                            class="fa fa-at"></i></div>
+                    <input type="text" name="email" class="form-control"
+                           id="email"
+                           placeholder="you@example.com" required autofocus>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="form-control-feedback">
+<span class="text-danger align-middle">
+<!-- Put e-mail validation error messages here -->
+</span>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-3 field-label-responsive">
+            <label for="password">Mot de passe</label>
+        </div>
+        <div class="col-md-6">
+            <div class="form-group has-danger">
+                <div class="input-group mb-2 mr-sm-2 mb-sm-0">
+                    <div class="input-group-addon" style="width: 2.6rem"><i
+                            class="fas fa-key"></i></div>
+                    <input type="password" name="password" class="form-control"
+                           id="password"
+                           placeholder="Password" required>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="form-control-feedback">
+<span class="text-danger align-middle">
+Example Error Message
+    </span>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-3 field-label-responsive">
+            <label for="password">Confirmer Mot de passe</label>
+        </div>
+        <div class="col-md-6">
+            <div class="form-group">
+                <div class="input-group mb-2 mr-sm-2 mb-sm-0">
+                    <div class="input-group-addon" style="width: 2.6rem">
+                        <i class="fas fa-key"></i>
+                    </div>
+                    <input type="password" name="password-confirmation"
+                           class="form-control"
+                           id="password-confirm" placeholder="Password" required>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-3"></div>
+        <div class="col-md-6">
+            <button type="submit" class="btn btn-success"><i class="fa fa-userplus"></i> Register</button>
+        </div>
+    </div>
+</form>
 </body>
-
 </html>
