--- a/src/main/resources/templates/layouts/main_layout.html
+++ b/src/main/resources/templates/layouts/main_layout.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"  xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" >
+<html lang="en"  xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security" >
 <head th:fragment="head(title)">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -39,34 +39,38 @@
                             <i class="fas fa-home" aria-hidden="true"></i> Accueil
                         </a>
                     </li>
+                    <!-- **** -->
 
                     <!-- if user is signed in -->
-                    <li class="nav-item ">
+                    <li class="nav-item " sec:authorize="isAuthenticated()">
                         <a class="nav-link" th:href="@{/link/submit}">
                             <i class="fa fa-book" aria-hidden="true"></i> livres</a>
                     </li>
-                    <li class="nav-item ">
+                    <li class="nav-item " sec:authorize="isAuthenticated()">
                         <a class="nav-link" th:href="@{/book/exchange}">
                             <i class="fa fa-handshake" aria-hidden="true"></i> Échange</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../auth/profile.html">
+                    <li class="nav-item" sec:authorize="isAuthenticated()">
+                        <a class="nav-link" th:href="@{/profile}">
                             <i class="fa fa-user" aria-hidden="true"></i> Compte</a>
                     </li>
                     <li class="nav-item">
-                        <form method="POST" th:action="@{/logout}">
+                        <form method="POST" th:action="@{/logout}" sec:authorize="isAuthenticated()">
                             <button class="nav-link"><i class="fa fa-sign-out-alt" aria-hidden="true"></i>
-                                Déconnexion</button>
+                               Déconnexion</button>
                         </form>
                     </li>
 
+
+
+
                     <!-- if user is not signed in -->
-                    <li class="nav-item">
-                        <a class="nav-link" href=../auth/login.html>
-                            <i class="fa fa-sign-in-alt" aria-hidden="true"></i> Connexion</a>
+                    <li class="nav-item" sec:authorize="!isAuthenticated()">
+                        <a class="nav-link" th:href="@{/login}">
+                            <i class="fa fa-sign-in-alt" aria-hidden="true"></i>Connexion</a>
                     </li>
-                    <li class="nav-item ">
-                        <a class="nav-link" href="../auth/register.html">
+                    <li class="nav-item" sec:authorize="!isAuthenticated()">
+                        <a class="nav-link" th:href="@{/register}">
                             <i class="fa fa-user-plus" aria-hidden="true"></i> S'identifier</a>
                     </li>
                 </ul>
